Avances editar usuario

--- a/frontend/src/components/Elements/InputBasico.css
+++ b/frontend/src/components/Elements/InputBasico.css
@@ -1,4 +1,8 @@
-textarea#descripcion {
+.input-basico textarea#descripcion {
     max-width: 500px;
     max-height: 200px;
+}
+.input-basico div {
+    width: 200px;
+    height: 200px;
 }
